--- a/dcmi_20240809.ioc
+++ b/dcmi_20240809.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-DCMI.CaptureRate=DCMI_CR_ALTERNATE_2_FRAME
+DCMI.CaptureRate=DCMI_CR_ALL_FRAME
 DCMI.IPParameters=JPEGMode,PCKPolarity,VSPolarity,CaptureRate
 DCMI.JPEGMode=DCMI_JPEG_DISABLE
 DCMI.PCKPolarity=DCMI_PCKPOLARITY_RISING
@@ -10,12 +10,12 @@ Dma.DCMI.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
 Dma.DCMI.0.Instance=DMA2_Stream1
 Dma.DCMI.0.MemBurst=DMA_MBURST_SINGLE
 Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.DCMI.0.MemInc=DMA_MINC_DISABLE
-Dma.DCMI.0.Mode=DMA_NORMAL
+Dma.DCMI.0.MemInc=DMA_MINC_ENABLE
+Dma.DCMI.0.Mode=DMA_CIRCULAR
 Dma.DCMI.0.PeriphBurst=DMA_PBURST_SINGLE
 Dma.DCMI.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.DCMI.0.PeriphInc=DMA_PINC_DISABLE
-Dma.DCMI.0.Priority=DMA_PRIORITY_LOW
+Dma.DCMI.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.Request0=DCMI
 Dma.Request1=UART4_TX
@@ -33,44 +33,91 @@ Dma.UART4_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.UART4_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.UART4_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+FSMC.AddressSetupTime3=1
+FSMC.BusTurnAroundDuration3=0
+FSMC.DataSetupTime3=6
+FSMC.ExtendedMode3=FSMC_EXTENDED_MODE_DISABLE
+FSMC.IPParameters=AddressSetupTime3,DataSetupTime3,BusTurnAroundDuration3,ExtendedMode3,WriteOperation3
+FSMC.WriteOperation3=FSMC_WRITE_OPERATION_ENABLE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
 Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=UART4
-Mcu.IPNb=6
+Mcu.IP2=FSMC
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=UART4
+Mcu.IPNb=7
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE4
 Mcu.Pin1=PE5
-Mcu.Pin10=PC7
-Mcu.Pin11=PC8
-Mcu.Pin12=PC9
-Mcu.Pin13=PA8
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PD3
-Mcu.Pin17=PD6
-Mcu.Pin18=PD7
-Mcu.Pin19=PG9
+Mcu.Pin10=PH1-OSC_OUT
+Mcu.Pin11=PA0-WKUP
+Mcu.Pin12=PA1
+Mcu.Pin13=PA4
+Mcu.Pin14=PA6
+Mcu.Pin15=PF12
+Mcu.Pin16=PF13
+Mcu.Pin17=PF14
+Mcu.Pin18=PF15
+Mcu.Pin19=PG0
 Mcu.Pin2=PE6
-Mcu.Pin20=PG15
-Mcu.Pin21=PB6
-Mcu.Pin22=PB7
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA4
-Mcu.Pin8=PA6
-Mcu.Pin9=PC6
-Mcu.PinsNb=24
+Mcu.Pin20=PG1
+Mcu.Pin21=PE7
+Mcu.Pin22=PE8
+Mcu.Pin23=PE9
+Mcu.Pin24=PE10
+Mcu.Pin25=PE11
+Mcu.Pin26=PE12
+Mcu.Pin27=PE13
+Mcu.Pin28=PE14
+Mcu.Pin29=PE15
+Mcu.Pin3=PF0
+Mcu.Pin30=PD8
+Mcu.Pin31=PD9
+Mcu.Pin32=PD10
+Mcu.Pin33=PD11
+Mcu.Pin34=PD12
+Mcu.Pin35=PD13
+Mcu.Pin36=PD14
+Mcu.Pin37=PD15
+Mcu.Pin38=PG2
+Mcu.Pin39=PG3
+Mcu.Pin4=PF1
+Mcu.Pin40=PG4
+Mcu.Pin41=PG5
+Mcu.Pin42=PC6
+Mcu.Pin43=PC7
+Mcu.Pin44=PC8
+Mcu.Pin45=PC9
+Mcu.Pin46=PA8
+Mcu.Pin47=PA13
+Mcu.Pin48=PA14
+Mcu.Pin49=PD0
+Mcu.Pin5=PF2
+Mcu.Pin50=PD1
+Mcu.Pin51=PD3
+Mcu.Pin52=PD4
+Mcu.Pin53=PD5
+Mcu.Pin54=PD6
+Mcu.Pin55=PD7
+Mcu.Pin56=PG9
+Mcu.Pin57=PG10
+Mcu.Pin58=PG15
+Mcu.Pin59=PB6
+Mcu.Pin6=PF3
+Mcu.Pin60=PB7
+Mcu.Pin61=PE0
+Mcu.Pin62=PE1
+Mcu.Pin63=VP_SYS_VS_Systick
+Mcu.Pin7=PF4
+Mcu.Pin8=PF5
+Mcu.Pin9=PH0-OSC_IN
+Mcu.PinsNb=64
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -78,7 +125,7 @@ MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DCMI_IRQn=true\:2\:0\:true\:false\:true\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream4_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -144,8 +191,18 @@ PC9.GPIO_PuPd=GPIO_PULLDOWN
 PC9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC9.Mode=Slave_8_bits_External_Synchro
 PC9.Signal=DCMI_D3
+PD0.Signal=FSMC_D2_DA2
+PD1.Signal=FSMC_D3_DA3
+PD10.Signal=FSMC_D15_DA15
+PD11.Signal=FSMC_A16_CLE
+PD12.Signal=FSMC_A17_ALE
+PD13.Signal=FSMC_A18
+PD14.Signal=FSMC_D0_DA0
+PD15.Signal=FSMC_D1_DA1
 PD3.Locked=true
 PD3.Signal=GPIO_Output
+PD4.Signal=FSMC_NOE
+PD5.Signal=FSMC_NWE
 PD6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd
 PD6.GPIO_PuPd=GPIO_PULLUP
 PD6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -158,6 +215,16 @@ PD7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD7.Locked=true
 PD7.PinState=GPIO_PIN_SET
 PD7.Signal=GPIO_Output
+PD8.Signal=FSMC_D13_DA13
+PD9.Signal=FSMC_D14_DA14
+PE0.Signal=FSMC_NBL0
+PE1.Signal=FSMC_NBL1
+PE10.Signal=FSMC_D7_DA7
+PE11.Signal=FSMC_D8_DA8
+PE12.Signal=FSMC_D9_DA9
+PE13.Signal=FSMC_D10_DA10
+PE14.Signal=FSMC_D11_DA11
+PE15.Signal=FSMC_D12_DA12
 PE4.GPIOParameters=GPIO_Speed,GPIO_PuPd
 PE4.GPIO_PuPd=GPIO_PULLDOWN
 PE4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -173,10 +240,31 @@ PE6.GPIO_PuPd=GPIO_PULLDOWN
 PE6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE6.Mode=Slave_8_bits_External_Synchro
 PE6.Signal=DCMI_D7
+PE7.Signal=FSMC_D4_DA4
+PE8.Signal=FSMC_D5_DA5
+PE9.Signal=FSMC_D6_DA6
+PF0.Signal=FSMC_A0
+PF1.Signal=FSMC_A1
+PF12.Signal=FSMC_A6
+PF13.Signal=FSMC_A7
+PF14.Signal=FSMC_A8
+PF15.Signal=FSMC_A9
+PF2.Signal=FSMC_A2
+PF3.Signal=FSMC_A3
+PF4.Signal=FSMC_A4
+PF5.Signal=FSMC_A5
+PG0.Signal=FSMC_A10
+PG1.Signal=FSMC_A11
+PG10.Mode=NorPsramChipSelect3_3
+PG10.Signal=FSMC_NE3
 PG15.GPIOParameters=PinState
 PG15.Locked=true
 PG15.PinState=GPIO_PIN_SET
 PG15.Signal=GPIO_Output
+PG2.Signal=FSMC_A12
+PG3.Signal=FSMC_A13
+PG4.Signal=FSMC_A14
+PG5.Signal=FSMC_A15
 PG9.GPIOParameters=GPIO_PuPd
 PG9.GPIO_PuPd=GPIO_PULLDOWN
 PG9.Locked=true
@@ -213,7 +301,7 @@ ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DCMI_Init-DCMI-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DCMI_Init-DCMI-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_FSMC_Init-FSMC-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -250,6 +338,84 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=192000000
+SH.FSMC_A0.0=FSMC_A0,19b-a3
+SH.FSMC_A0.ConfNb=1
+SH.FSMC_A1.0=FSMC_A1,19b-a3
+SH.FSMC_A1.ConfNb=1
+SH.FSMC_A10.0=FSMC_A10,19b-a3
+SH.FSMC_A10.ConfNb=1
+SH.FSMC_A11.0=FSMC_A11,19b-a3
+SH.FSMC_A11.ConfNb=1
+SH.FSMC_A12.0=FSMC_A12,19b-a3
+SH.FSMC_A12.ConfNb=1
+SH.FSMC_A13.0=FSMC_A13,19b-a3
+SH.FSMC_A13.ConfNb=1
+SH.FSMC_A14.0=FSMC_A14,19b-a3
+SH.FSMC_A14.ConfNb=1
+SH.FSMC_A15.0=FSMC_A15,19b-a3
+SH.FSMC_A15.ConfNb=1
+SH.FSMC_A16_CLE.0=FSMC_A16,19b-a3
+SH.FSMC_A16_CLE.ConfNb=1
+SH.FSMC_A17_ALE.0=FSMC_A17,19b-a3
+SH.FSMC_A17_ALE.ConfNb=1
+SH.FSMC_A18.0=FSMC_A18,19b-a3
+SH.FSMC_A18.ConfNb=1
+SH.FSMC_A2.0=FSMC_A2,19b-a3
+SH.FSMC_A2.ConfNb=1
+SH.FSMC_A3.0=FSMC_A3,19b-a3
+SH.FSMC_A3.ConfNb=1
+SH.FSMC_A4.0=FSMC_A4,19b-a3
+SH.FSMC_A4.ConfNb=1
+SH.FSMC_A5.0=FSMC_A5,19b-a3
+SH.FSMC_A5.ConfNb=1
+SH.FSMC_A6.0=FSMC_A6,19b-a3
+SH.FSMC_A6.ConfNb=1
+SH.FSMC_A7.0=FSMC_A7,19b-a3
+SH.FSMC_A7.ConfNb=1
+SH.FSMC_A8.0=FSMC_A8,19b-a3
+SH.FSMC_A8.ConfNb=1
+SH.FSMC_A9.0=FSMC_A9,19b-a3
+SH.FSMC_A9.ConfNb=1
+SH.FSMC_D0_DA0.0=FSMC_D0,16b-d3
+SH.FSMC_D0_DA0.ConfNb=1
+SH.FSMC_D10_DA10.0=FSMC_D10,16b-d3
+SH.FSMC_D10_DA10.ConfNb=1
+SH.FSMC_D11_DA11.0=FSMC_D11,16b-d3
+SH.FSMC_D11_DA11.ConfNb=1
+SH.FSMC_D12_DA12.0=FSMC_D12,16b-d3
+SH.FSMC_D12_DA12.ConfNb=1
+SH.FSMC_D13_DA13.0=FSMC_D13,16b-d3
+SH.FSMC_D13_DA13.ConfNb=1
+SH.FSMC_D14_DA14.0=FSMC_D14,16b-d3
+SH.FSMC_D14_DA14.ConfNb=1
+SH.FSMC_D15_DA15.0=FSMC_D15,16b-d3
+SH.FSMC_D15_DA15.ConfNb=1
+SH.FSMC_D1_DA1.0=FSMC_D1,16b-d3
+SH.FSMC_D1_DA1.ConfNb=1
+SH.FSMC_D2_DA2.0=FSMC_D2,16b-d3
+SH.FSMC_D2_DA2.ConfNb=1
+SH.FSMC_D3_DA3.0=FSMC_D3,16b-d3
+SH.FSMC_D3_DA3.ConfNb=1
+SH.FSMC_D4_DA4.0=FSMC_D4,16b-d3
+SH.FSMC_D4_DA4.ConfNb=1
+SH.FSMC_D5_DA5.0=FSMC_D5,16b-d3
+SH.FSMC_D5_DA5.ConfNb=1
+SH.FSMC_D6_DA6.0=FSMC_D6,16b-d3
+SH.FSMC_D6_DA6.ConfNb=1
+SH.FSMC_D7_DA7.0=FSMC_D7,16b-d3
+SH.FSMC_D7_DA7.ConfNb=1
+SH.FSMC_D8_DA8.0=FSMC_D8,16b-d3
+SH.FSMC_D8_DA8.ConfNb=1
+SH.FSMC_D9_DA9.0=FSMC_D9,16b-d3
+SH.FSMC_D9_DA9.ConfNb=1
+SH.FSMC_NBL0.0=FSMC_NBL0,2ByteEnable3
+SH.FSMC_NBL0.ConfNb=1
+SH.FSMC_NBL1.0=FSMC_NBL1,2ByteEnable3
+SH.FSMC_NBL1.ConfNb=1
+SH.FSMC_NOE.0=FSMC_NOE,Sram3
+SH.FSMC_NOE.ConfNb=1
+SH.FSMC_NWE.0=FSMC_NWE,Sram3
+SH.FSMC_NWE.ConfNb=1
 UART4.BaudRate=115200
 UART4.IPParameters=VirtualMode,BaudRate
 UART4.VirtualMode=Asynchronous
