fsmc and dcmi to sram to usb otg upan

--- a/dcmi_20240809.ioc
+++ b/dcmi_20240809.ioc
@@ -1,41 +1,38 @@
 #MicroXplorer Configuration settings - do not modify
-DCMI.CaptureRate=DCMI_CR_ALL_FRAME
-DCMI.IPParameters=JPEGMode,PCKPolarity,VSPolarity,CaptureRate
-DCMI.JPEGMode=DCMI_JPEG_DISABLE
+DCMI.IPParameters=PCKPolarity
 DCMI.PCKPolarity=DCMI_PCKPOLARITY_RISING
-DCMI.VSPolarity=DCMI_VSPOLARITY_LOW
-Dma.DCMI.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.DCMI.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.DCMI.0.Instance=DMA2_Stream1
-Dma.DCMI.0.MemBurst=DMA_MBURST_SINGLE
-Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.DCMI.0.MemInc=DMA_MINC_ENABLE
-Dma.DCMI.0.Mode=DMA_CIRCULAR
-Dma.DCMI.0.PeriphBurst=DMA_PBURST_SINGLE
-Dma.DCMI.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.DCMI.0.PeriphInc=DMA_PINC_DISABLE
-Dma.DCMI.0.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.Request0=DCMI
-Dma.Request1=UART4_TX
+Dma.DCMI.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DCMI.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.DCMI.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.DCMI.1.Instance=DMA2_Stream1
+Dma.DCMI.1.MemBurst=DMA_MBURST_SINGLE
+Dma.DCMI.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.DCMI.1.MemInc=DMA_MINC_ENABLE
+Dma.DCMI.1.Mode=DMA_CIRCULAR
+Dma.DCMI.1.PeriphBurst=DMA_PBURST_SINGLE
+Dma.DCMI.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.DCMI.1.PeriphInc=DMA_PINC_DISABLE
+Dma.DCMI.1.Priority=DMA_PRIORITY_LOW
+Dma.DCMI.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.Request0=UART4_TX
+Dma.Request1=DCMI
 Dma.RequestsNb=2
-Dma.UART4_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.UART4_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.UART4_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.UART4_TX.1.Instance=DMA1_Stream4
-Dma.UART4_TX.1.MemBurst=DMA_MBURST_SINGLE
-Dma.UART4_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART4_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.UART4_TX.1.Mode=DMA_NORMAL
-Dma.UART4_TX.1.PeriphBurst=DMA_PBURST_SINGLE
-Dma.UART4_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART4_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.UART4_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-FSMC.AddressSetupTime3=1
+Dma.UART4_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART4_TX.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.UART4_TX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.UART4_TX.0.Instance=DMA1_Stream4
+Dma.UART4_TX.0.MemBurst=DMA_MBURST_SINGLE
+Dma.UART4_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART4_TX.0.Mode=DMA_NORMAL
+Dma.UART4_TX.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.UART4_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.UART4_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+FSMC.AddressSetupTime3=0
 FSMC.BusTurnAroundDuration3=0
-FSMC.DataSetupTime3=6
+FSMC.DataSetupTime3=4
 FSMC.ExtendedMode3=FSMC_EXTENDED_MODE_DISABLE
 FSMC.IPParameters=AddressSetupTime3,DataSetupTime3,BusTurnAroundDuration3,ExtendedMode3,WriteOperation3
 FSMC.WriteOperation3=FSMC_WRITE_OPERATION_ENABLE
@@ -45,12 +42,15 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
 Mcu.IP1=DMA
-Mcu.IP2=FSMC
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=UART4
-Mcu.IPNb=7
+Mcu.IP2=FATFS
+Mcu.IP3=FSMC
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=UART4
+Mcu.IP8=USB_HOST
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE4
@@ -95,43 +95,49 @@ Mcu.Pin43=PC7
 Mcu.Pin44=PC8
 Mcu.Pin45=PC9
 Mcu.Pin46=PA8
-Mcu.Pin47=PA13
-Mcu.Pin48=PA14
-Mcu.Pin49=PD0
+Mcu.Pin47=PA9
+Mcu.Pin48=PA11
+Mcu.Pin49=PA12
 Mcu.Pin5=PF2
-Mcu.Pin50=PD1
-Mcu.Pin51=PD3
-Mcu.Pin52=PD4
-Mcu.Pin53=PD5
-Mcu.Pin54=PD6
-Mcu.Pin55=PD7
-Mcu.Pin56=PG9
-Mcu.Pin57=PG10
-Mcu.Pin58=PG15
-Mcu.Pin59=PB6
+Mcu.Pin50=PA13
+Mcu.Pin51=PA14
+Mcu.Pin52=PD0
+Mcu.Pin53=PD1
+Mcu.Pin54=PD3
+Mcu.Pin55=PD4
+Mcu.Pin56=PD5
+Mcu.Pin57=PD6
+Mcu.Pin58=PD7
+Mcu.Pin59=PG9
 Mcu.Pin6=PF3
-Mcu.Pin60=PB7
-Mcu.Pin61=PE0
-Mcu.Pin62=PE1
-Mcu.Pin63=VP_SYS_VS_Systick
+Mcu.Pin60=PG10
+Mcu.Pin61=PG15
+Mcu.Pin62=PB6
+Mcu.Pin63=PB7
+Mcu.Pin64=PE0
+Mcu.Pin65=PE1
+Mcu.Pin66=VP_FATFS_VS_USB
+Mcu.Pin67=VP_SYS_VS_Systick
+Mcu.Pin68=VP_USB_HOST_VS_USB_HOST_MSC_FS
 Mcu.Pin7=PF4
 Mcu.Pin8=PF5
 Mcu.Pin9=PH0-OSC_IN
-Mcu.PinsNb=64
+Mcu.PinsNb=69
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
 MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DCMI_IRQn=true\:2\:0\:true\:false\:true\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:1\:0\:true\:false\:true\:false\:true
+NVIC.DCMI_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:0\:0\:true\:false\:true\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -142,17 +148,23 @@ PA0-WKUP.Mode=Asynchronous
 PA0-WKUP.Signal=UART4_TX
 PA1.Mode=Asynchronous
 PA1.Signal=UART4_RX
+PA11.Mode=Host_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Mode=Host_Only
+PA12.Signal=USB_OTG_FS_DP
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PA4.GPIO_PuPd=GPIO_PULLDOWN
+PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA4.GPIO_Mode=GPIO_MODE_AF_PP
+PA4.GPIO_PuPd=GPIO_NOPULL
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA4.Mode=Slave_8_bits_External_Synchro
 PA4.Signal=DCMI_HSYNC
-PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PA6.GPIO_PuPd=GPIO_PULLDOWN
+PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA6.GPIO_Mode=GPIO_MODE_AF_PP
+PA6.GPIO_PuPd=GPIO_NOPULL
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.Mode=Slave_8_bits_External_Synchro
 PA6.Signal=DCMI_PIXCLK
@@ -161,33 +173,43 @@ PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA8.Locked=true
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
-PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PB6.GPIO_PuPd=GPIO_PULLDOWN
+PA9.GPIOParameters=PinState
+PA9.Locked=true
+PA9.PinState=GPIO_PIN_SET
+PA9.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PB6.GPIO_Mode=GPIO_MODE_AF_PP
+PB6.GPIO_PuPd=GPIO_NOPULL
 PB6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB6.Mode=Slave_8_bits_External_Synchro
 PB6.Signal=DCMI_D5
-PB7.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PB7.GPIO_PuPd=GPIO_PULLDOWN
+PB7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PB7.GPIO_Mode=GPIO_MODE_AF_PP
+PB7.GPIO_PuPd=GPIO_NOPULL
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB7.Mode=Slave_8_bits_External_Synchro
 PB7.Signal=DCMI_VSYNC
-PC6.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PC6.GPIO_PuPd=GPIO_PULLDOWN
+PC6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PC6.GPIO_Mode=GPIO_MODE_AF_PP
+PC6.GPIO_PuPd=GPIO_NOPULL
 PC6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC6.Mode=Slave_8_bits_External_Synchro
 PC6.Signal=DCMI_D0
-PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PC7.GPIO_PuPd=GPIO_PULLDOWN
+PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PC7.GPIO_Mode=GPIO_MODE_AF_PP
+PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Mode=Slave_8_bits_External_Synchro
 PC7.Signal=DCMI_D1
-PC8.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PC8.GPIO_PuPd=GPIO_PULLDOWN
+PC8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PC8.GPIO_Mode=GPIO_MODE_AF_PP
+PC8.GPIO_PuPd=GPIO_NOPULL
 PC8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC8.Mode=Slave_8_bits_External_Synchro
 PC8.Signal=DCMI_D2
-PC9.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PC9.GPIO_PuPd=GPIO_PULLDOWN
+PC9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PC9.GPIO_Mode=GPIO_MODE_AF_PP
+PC9.GPIO_PuPd=GPIO_NOPULL
 PC9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC9.Mode=Slave_8_bits_External_Synchro
 PC9.Signal=DCMI_D3
@@ -225,18 +247,21 @@ PE12.Signal=FSMC_D9_DA9
 PE13.Signal=FSMC_D10_DA10
 PE14.Signal=FSMC_D11_DA11
 PE15.Signal=FSMC_D12_DA12
-PE4.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PE4.GPIO_PuPd=GPIO_PULLDOWN
+PE4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PE4.GPIO_Mode=GPIO_MODE_AF_PP
+PE4.GPIO_PuPd=GPIO_NOPULL
 PE4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE4.Mode=Slave_8_bits_External_Synchro
 PE4.Signal=DCMI_D4
-PE5.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PE5.GPIO_PuPd=GPIO_PULLDOWN
+PE5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PE5.GPIO_Mode=GPIO_MODE_AF_PP
+PE5.GPIO_PuPd=GPIO_NOPULL
 PE5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE5.Mode=Slave_8_bits_External_Synchro
 PE5.Signal=DCMI_D6
-PE6.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PE6.GPIO_PuPd=GPIO_PULLDOWN
+PE6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PE6.GPIO_Mode=GPIO_MODE_AF_PP
+PE6.GPIO_PuPd=GPIO_NOPULL
 PE6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE6.Mode=Slave_8_bits_External_Synchro
 PE6.Signal=DCMI_D7
@@ -301,7 +326,7 @@ ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DCMI_Init-DCMI-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_FSMC_Init-FSMC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DCMI_Init-DCMI-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_FSMC_Init-FSMC-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false,8-MX_USB_HOST_Init-USB_HOST-false-HAL-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -318,7 +343,7 @@ RCC.HCLKFreq_Value=96000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_MCO1Source,RCC_MCODiv1,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RCC_MCO1Source,RCC_MCODiv1,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=24000000
@@ -327,7 +352,6 @@ RCC.PLLCLKFreq_Value=96000000
 RCC.PLLM=4
 RCC.PLLN=96
 RCC.PLLQCLKFreq_Value=48000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RCC_MCO1Source=RCC_MCO1SOURCE_PLLCLK
 RCC.RCC_MCODiv1=RCC_MCODIV_4
 RCC.RTCFreq_Value=32000
@@ -419,7 +443,30 @@ SH.FSMC_NWE.ConfNb=1
 UART4.BaudRate=115200
 UART4.IPParameters=VirtualMode,BaudRate
 UART4.VirtualMode=Asynchronous
+USB_HOST.BSP.number=1
+USB_HOST.IPParameters=USBH_HandleTypeDef-MSC_FS,VirtualModeFS
+USB_HOST.USBH_HandleTypeDef-MSC_FS=hUsbHostFS
+USB_HOST.VirtualModeFS=Msc
+USB_HOST0.BSP.STBoard=false
+USB_HOST0.BSP.api=Unknown
+USB_HOST0.BSP.component=
+USB_HOST0.BSP.condition=
+USB_HOST0.BSP.i2caddr=0
+USB_HOST0.BSP.i2creg=
+USB_HOST0.BSP.instance=PA9
+USB_HOST0.BSP.ip=GPIO
+USB_HOST0.BSP.mode=Output
+USB_HOST0.BSP.name=Drive_VBUS_FS
+USB_HOST0.BSP.semaphore=
+USB_HOST0.BSP.solution=PA9
+USB_OTG_FS.IPParameters=VirtualMode,phy_itface
+USB_OTG_FS.VirtualMode=Host_Only
+USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
+VP_FATFS_VS_USB.Mode=USB
+VP_FATFS_VS_USB.Signal=FATFS_VS_USB
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_USB_HOST_VS_USB_HOST_MSC_FS.Mode=MSC_FS
+VP_USB_HOST_VS_USB_HOST_MSC_FS.Signal=USB_HOST_VS_USB_HOST_MSC_FS
 board=custom
 isbadioc=false
