--- a/dcmi_20240809.ioc
+++ b/dcmi_20240809.ioc
@@ -7,7 +7,7 @@ Dma.DCMI.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
 Dma.DCMI.1.Instance=DMA2_Stream1
 Dma.DCMI.1.MemBurst=DMA_MBURST_SINGLE
 Dma.DCMI.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.DCMI.1.MemInc=DMA_MINC_ENABLE
+Dma.DCMI.1.MemInc=DMA_MINC_DISABLE
 Dma.DCMI.1.Mode=DMA_CIRCULAR
 Dma.DCMI.1.PeriphBurst=DMA_PBURST_SINGLE
 Dma.DCMI.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
@@ -32,7 +32,7 @@ Dma.UART4_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.UART4_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 FSMC.AddressSetupTime3=0
 FSMC.BusTurnAroundDuration3=0
-FSMC.DataSetupTime3=4
+FSMC.DataSetupTime3=5
 FSMC.ExtendedMode3=FSMC_EXTENDED_MODE_DISABLE
 FSMC.IPParameters=AddressSetupTime3,DataSetupTime3,BusTurnAroundDuration3,ExtendedMode3,WriteOperation3
 FSMC.WriteOperation3=FSMC_WRITE_OPERATION_ENABLE
