--- a/dcmi_20240809.ioc
+++ b/dcmi_20240809.ioc
@@ -7,7 +7,7 @@ Dma.DCMI.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
 Dma.DCMI.1.Instance=DMA2_Stream1
 Dma.DCMI.1.MemBurst=DMA_MBURST_SINGLE
 Dma.DCMI.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.DCMI.1.MemInc=DMA_MINC_DISABLE
+Dma.DCMI.1.MemInc=DMA_MINC_ENABLE
 Dma.DCMI.1.Mode=DMA_CIRCULAR
 Dma.DCMI.1.PeriphBurst=DMA_PBURST_SINGLE
 Dma.DCMI.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
