--- a/dcmi_20240809.ioc
+++ b/dcmi_20240809.ioc
@@ -1,35 +1,46 @@
 #MicroXplorer Configuration settings - do not modify
 DCMI.IPParameters=PCKPolarity
 DCMI.PCKPolarity=DCMI_PCKPOLARITY_RISING
-Dma.DCMI.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.DCMI.1.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.DCMI.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.DCMI.1.Instance=DMA2_Stream1
-Dma.DCMI.1.MemBurst=DMA_MBURST_SINGLE
-Dma.DCMI.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.DCMI.1.MemInc=DMA_MINC_ENABLE
-Dma.DCMI.1.Mode=DMA_CIRCULAR
-Dma.DCMI.1.PeriphBurst=DMA_PBURST_SINGLE
-Dma.DCMI.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.DCMI.1.PeriphInc=DMA_PINC_DISABLE
-Dma.DCMI.1.Priority=DMA_PRIORITY_LOW
-Dma.DCMI.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.Request0=UART4_TX
-Dma.Request1=DCMI
+Dma.DCMI.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.DCMI.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.DCMI.0.Instance=DMA2_Stream1
+Dma.DCMI.0.MemBurst=DMA_MBURST_SINGLE
+Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.DCMI.0.MemInc=DMA_MINC_ENABLE
+Dma.DCMI.0.Mode=DMA_CIRCULAR
+Dma.DCMI.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.DCMI.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.DCMI.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DCMI.0.Priority=DMA_PRIORITY_LOW
+Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.Request0=DCMI
+Dma.Request1=UART4_TX
 Dma.RequestsNb=2
-Dma.UART4_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.UART4_TX.0.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.UART4_TX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.UART4_TX.0.Instance=DMA1_Stream4
-Dma.UART4_TX.0.MemBurst=DMA_MBURST_SINGLE
-Dma.UART4_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART4_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.UART4_TX.0.Mode=DMA_NORMAL
-Dma.UART4_TX.0.PeriphBurst=DMA_PBURST_SINGLE
-Dma.UART4_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART4_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.UART4_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.UART4_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.UART4_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART4_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.UART4_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.UART4_TX.1.Instance=DMA1_Stream4
+Dma.UART4_TX.1.MemBurst=DMA_MBURST_SINGLE
+Dma.UART4_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.UART4_TX.1.Mode=DMA_NORMAL
+Dma.UART4_TX.1.PeriphBurst=DMA_PBURST_SINGLE
+Dma.UART4_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+ETH.IPParameters=MediaInterface,PHY_Name_RMII,PHY_SR,PHY_SPEED_STATUS,PHY_DUPLEX_STATUS
+ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
+ETH.PHY_DUPLEX_STATUS=0x0010
+ETH.PHY_Name_RMII=DP83848_PHY_ADDRESS
+ETH.PHY_SPEED_STATUS=0x0004
+ETH.PHY_SR=0x31
+FREERTOS.FootprintOK=false
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-1,512,StartTask02,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=61440
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 FSMC.AddressSetupTime3=0
 FSMC.BusTurnAroundDuration3=0
 FSMC.DataSetupTime3=5
@@ -39,115 +50,143 @@ FSMC.WriteOperation3=FSMC_WRITE_OPERATION_ENABLE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+LWIP.GATEWAY_ADDRESS=192.168.001.001
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE
+LWIP.IP_ADDRESS=192.168.001.066
+LWIP.LWIP_DHCP=0
+LWIP.MEM_SIZE=10240
+LWIP.NETMASK_ADDRESS=255.255.255.000
+LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
 Mcu.IP1=DMA
-Mcu.IP2=FATFS
-Mcu.IP3=FSMC
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=UART4
-Mcu.IP8=USB_HOST
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP10=UART4
+Mcu.IP11=USB_HOST
+Mcu.IP12=USB_OTG_FS
+Mcu.IP2=ETH
+Mcu.IP3=FATFS
+Mcu.IP4=FREERTOS
+Mcu.IP5=FSMC
+Mcu.IP6=LWIP
+Mcu.IP7=NVIC
+Mcu.IP8=RCC
+Mcu.IP9=SYS
+Mcu.IPNb=13
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE4
 Mcu.Pin1=PE5
 Mcu.Pin10=PH1-OSC_OUT
-Mcu.Pin11=PA0-WKUP
-Mcu.Pin12=PA1
-Mcu.Pin13=PA4
-Mcu.Pin14=PA6
-Mcu.Pin15=PF12
-Mcu.Pin16=PF13
-Mcu.Pin17=PF14
-Mcu.Pin18=PF15
-Mcu.Pin19=PG0
+Mcu.Pin11=PC1
+Mcu.Pin12=PA0-WKUP
+Mcu.Pin13=PA1
+Mcu.Pin14=PA2
+Mcu.Pin15=PA4
+Mcu.Pin16=PA6
+Mcu.Pin17=PA7
+Mcu.Pin18=PC4
+Mcu.Pin19=PC5
 Mcu.Pin2=PE6
-Mcu.Pin20=PG1
-Mcu.Pin21=PE7
-Mcu.Pin22=PE8
-Mcu.Pin23=PE9
-Mcu.Pin24=PE10
-Mcu.Pin25=PE11
-Mcu.Pin26=PE12
-Mcu.Pin27=PE13
-Mcu.Pin28=PE14
-Mcu.Pin29=PE15
+Mcu.Pin20=PF12
+Mcu.Pin21=PF13
+Mcu.Pin22=PF14
+Mcu.Pin23=PF15
+Mcu.Pin24=PG0
+Mcu.Pin25=PG1
+Mcu.Pin26=PE7
+Mcu.Pin27=PE8
+Mcu.Pin28=PE9
+Mcu.Pin29=PE10
 Mcu.Pin3=PF0
-Mcu.Pin30=PD8
-Mcu.Pin31=PD9
-Mcu.Pin32=PD10
-Mcu.Pin33=PD11
-Mcu.Pin34=PD12
-Mcu.Pin35=PD13
-Mcu.Pin36=PD14
-Mcu.Pin37=PD15
-Mcu.Pin38=PG2
-Mcu.Pin39=PG3
+Mcu.Pin30=PE11
+Mcu.Pin31=PE12
+Mcu.Pin32=PE13
+Mcu.Pin33=PE14
+Mcu.Pin34=PE15
+Mcu.Pin35=PD8
+Mcu.Pin36=PD9
+Mcu.Pin37=PD10
+Mcu.Pin38=PD11
+Mcu.Pin39=PD12
 Mcu.Pin4=PF1
-Mcu.Pin40=PG4
-Mcu.Pin41=PG5
-Mcu.Pin42=PC6
-Mcu.Pin43=PC7
-Mcu.Pin44=PC8
-Mcu.Pin45=PC9
-Mcu.Pin46=PA8
-Mcu.Pin47=PA9
-Mcu.Pin48=PA11
-Mcu.Pin49=PA12
+Mcu.Pin40=PD13
+Mcu.Pin41=PD14
+Mcu.Pin42=PD15
+Mcu.Pin43=PG2
+Mcu.Pin44=PG3
+Mcu.Pin45=PG4
+Mcu.Pin46=PG5
+Mcu.Pin47=PC6
+Mcu.Pin48=PC7
+Mcu.Pin49=PC8
 Mcu.Pin5=PF2
-Mcu.Pin50=PA13
-Mcu.Pin51=PA14
-Mcu.Pin52=PD0
-Mcu.Pin53=PD1
-Mcu.Pin54=PD3
-Mcu.Pin55=PD4
-Mcu.Pin56=PD5
-Mcu.Pin57=PD6
-Mcu.Pin58=PD7
-Mcu.Pin59=PG9
+Mcu.Pin50=PC9
+Mcu.Pin51=PA8
+Mcu.Pin52=PA9
+Mcu.Pin53=PA11
+Mcu.Pin54=PA12
+Mcu.Pin55=PA13
+Mcu.Pin56=PA14
+Mcu.Pin57=PC11
+Mcu.Pin58=PD0
+Mcu.Pin59=PD1
 Mcu.Pin6=PF3
-Mcu.Pin60=PG10
-Mcu.Pin61=PG15
-Mcu.Pin62=PB6
-Mcu.Pin63=PB7
-Mcu.Pin64=PE0
-Mcu.Pin65=PE1
-Mcu.Pin66=VP_FATFS_VS_USB
-Mcu.Pin67=VP_SYS_VS_Systick
-Mcu.Pin68=VP_USB_HOST_VS_USB_HOST_MSC_FS
+Mcu.Pin60=PD3
+Mcu.Pin61=PD4
+Mcu.Pin62=PD5
+Mcu.Pin63=PD6
+Mcu.Pin64=PD7
+Mcu.Pin65=PG9
+Mcu.Pin66=PG10
+Mcu.Pin67=PG11
+Mcu.Pin68=PG13
+Mcu.Pin69=PG14
 Mcu.Pin7=PF4
+Mcu.Pin70=PG15
+Mcu.Pin71=PB6
+Mcu.Pin72=PB7
+Mcu.Pin73=PE0
+Mcu.Pin74=PE1
+Mcu.Pin75=VP_FATFS_VS_USB
+Mcu.Pin76=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin77=VP_LWIP_VS_Enabled
+Mcu.Pin78=VP_SYS_VS_tim7
+Mcu.Pin79=VP_USB_HOST_VS_USB_HOST_MSC_FS
 Mcu.Pin8=PF5
 Mcu.Pin9=PH0-OSC_IN
-Mcu.PinsNb=69
+Mcu.PinsNb=80
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
 MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DCMI_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:0\:0\:true\:false\:true\:false\:true
-NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DCMI_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA2_Stream1_IRQn=true\:6\:0\:true\:false\:true\:true\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.ETH_IRQn=true\:7\:0\:true\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
-NVIC.UART4_IRQn=true\:1\:0\:true\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
+NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
+NVIC.TimeBase=TIM7_IRQn
+NVIC.TimeBaseIP=TIM7
+NVIC.UART4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Mode=Asynchronous
 PA0-WKUP.Signal=UART4_TX
-PA1.Mode=Asynchronous
-PA1.Signal=UART4_RX
+PA1.Mode=RMII
+PA1.Signal=ETH_REF_CLK
 PA11.Mode=Host_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Host_Only
@@ -156,6 +195,8 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Mode=RMII
+PA2.Signal=ETH_MDIO
 PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA4.GPIO_Mode=GPIO_MODE_AF_PP
 PA4.GPIO_PuPd=GPIO_NOPULL
@@ -168,6 +209,8 @@ PA6.GPIO_PuPd=GPIO_NOPULL
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.Mode=Slave_8_bits_External_Synchro
 PA6.Signal=DCMI_PIXCLK
+PA7.Mode=RMII
+PA7.Signal=ETH_CRS_DV
 PA8.GPIOParameters=GPIO_Speed
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA8.Locked=true
@@ -189,6 +232,14 @@ PB7.GPIO_PuPd=GPIO_NOPULL
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB7.Mode=Slave_8_bits_External_Synchro
 PB7.Signal=DCMI_VSYNC
+PC1.Mode=RMII
+PC1.Signal=ETH_MDC
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
+PC4.Mode=RMII
+PC4.Signal=ETH_RXD0
+PC5.Mode=RMII
+PC5.Signal=ETH_RXD1
 PC6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PC6.GPIO_Mode=GPIO_MODE_AF_PP
 PC6.GPIO_PuPd=GPIO_NOPULL
@@ -282,6 +333,15 @@ PG0.Signal=FSMC_A10
 PG1.Signal=FSMC_A11
 PG10.Mode=NorPsramChipSelect3_3
 PG10.Signal=FSMC_NE3
+PG11.Locked=true
+PG11.Mode=RMII
+PG11.Signal=ETH_TX_EN
+PG13.Locked=true
+PG13.Mode=RMII
+PG13.Signal=ETH_TXD0
+PG14.Locked=true
+PG14.Mode=RMII
+PG14.Signal=ETH_TXD1
 PG15.GPIOParameters=PinState
 PG15.Locked=true
 PG15.PinState=GPIO_PIN_SET
@@ -311,7 +371,7 @@ ProjectManager.DeviceId=STM32F407ZGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x2000
+ProjectManager.HeapSize=0x700
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -322,11 +382,11 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=dcmi_20240809.ioc
 ProjectManager.ProjectName=dcmi_20240809
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x2000
+ProjectManager.StackSize=0x700
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DCMI_Init-DCMI-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_FSMC_Init-FSMC-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false,8-MX_USB_HOST_Init-USB_HOST-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_DCMI_Init-DCMI-false-HAL-true,5-MX_UART4_Init-UART4-false-HAL-true,6-MX_FSMC_Init-FSMC-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false,8-MX_USB_HOST_Init-USB_HOST-false-HAL-false,9-MX_LWIP_Init-LWIP-false-HAL-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -440,12 +500,12 @@ SH.FSMC_NOE.0=FSMC_NOE,Sram3
 SH.FSMC_NOE.ConfNb=1
 SH.FSMC_NWE.0=FSMC_NWE,Sram3
 SH.FSMC_NWE.ConfNb=1
-UART4.BaudRate=115200
-UART4.IPParameters=VirtualMode,BaudRate
+UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
 USB_HOST.BSP.number=1
-USB_HOST.IPParameters=USBH_HandleTypeDef-MSC_FS,VirtualModeFS
+USB_HOST.IPParameters=USBH_HandleTypeDef-MSC_FS,VirtualModeFS,USBH_USE_OS-MSC_FS
 USB_HOST.USBH_HandleTypeDef-MSC_FS=hUsbHostFS
+USB_HOST.USBH_USE_OS-MSC_FS=0
 USB_HOST.VirtualModeFS=Msc
 USB_HOST0.BSP.STBoard=false
 USB_HOST0.BSP.api=Unknown
@@ -464,8 +524,12 @@ USB_OTG_FS.VirtualMode=Host_Only
 USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
 VP_FATFS_VS_USB.Mode=USB
 VP_FATFS_VS_USB.Signal=FATFS_VS_USB
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+VP_LWIP_VS_Enabled.Mode=Enabled
+VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
+VP_SYS_VS_tim7.Mode=TIM7
+VP_SYS_VS_tim7.Signal=SYS_VS_tim7
 VP_USB_HOST_VS_USB_HOST_MSC_FS.Mode=MSC_FS
 VP_USB_HOST_VS_USB_HOST_MSC_FS.Signal=USB_HOST_VS_USB_HOST_MSC_FS
 board=custom
