--- a/dcmi_20240809.ioc
+++ b/dcmi_20240809.ioc
@@ -36,14 +36,14 @@ ETH.PHY_DUPLEX_STATUS=0x0010
 ETH.PHY_Name_RMII=DP83848_PHY_ADDRESS
 ETH.PHY_SPEED_STATUS=0x0004
 ETH.PHY_SR=0x31
-FREERTOS.FootprintOK=false
+FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,-1,512,StartTask02,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configTOTAL_HEAP_SIZE=61440
+FREERTOS.Tasks01=defaultTask,0,1024,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,1,1024,StartTask02,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=25600
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 FSMC.AddressSetupTime3=0
 FSMC.BusTurnAroundDuration3=0
-FSMC.DataSetupTime3=5
+FSMC.DataSetupTime3=4
 FSMC.ExtendedMode3=FSMC_EXTENDED_MODE_DISABLE
 FSMC.IPParameters=AddressSetupTime3,DataSetupTime3,BusTurnAroundDuration3,ExtendedMode3,WriteOperation3
 FSMC.WriteOperation3=FSMC_WRITE_OPERATION_ENABLE
@@ -51,11 +51,14 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 LWIP.GATEWAY_ADDRESS=192.168.001.001
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,TCP_SND_QUEUELEN,MEMP_NUM_TCP_SEG,PBUF_POOL_BUFSIZE
 LWIP.IP_ADDRESS=192.168.001.066
 LWIP.LWIP_DHCP=0
-LWIP.MEM_SIZE=10240
+LWIP.MEMP_NUM_TCP_SEG=300
+LWIP.MEM_SIZE=30*1024
 LWIP.NETMASK_ADDRESS=255.255.255.000
+LWIP.PBUF_POOL_BUFSIZE=1600
+LWIP.TCP_SND_QUEUELEN=200
 LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
@@ -165,12 +168,12 @@ NVIC.DCMI_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:6\:0\:true\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.ETH_IRQn=true\:7\:0\:true\:false\:true\:true\:false\:true
+NVIC.ETH_IRQn=true\:5\:0\:true\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.OTG_FS_IRQn=true\:5\:0\:true\:false\:true\:true\:false\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
@@ -371,7 +374,7 @@ ProjectManager.DeviceId=STM32F407ZGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x700
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -382,7 +385,7 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=dcmi_20240809.ioc
 ProjectManager.ProjectName=dcmi_20240809
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x700
+ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
