can send raw data in sram to the server by ethernet and concreate a bmp picture

--- a/dcmi_20240809.ioc
+++ b/dcmi_20240809.ioc
@@ -51,14 +51,15 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 LWIP.GATEWAY_ADDRESS=192.168.001.001
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,TCP_SND_QUEUELEN,MEMP_NUM_TCP_SEG,PBUF_POOL_BUFSIZE
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,TCP_SND_QUEUELEN,MEMP_NUM_TCP_SEG,PBUF_POOL_BUFSIZE,TCP_MSS
 LWIP.IP_ADDRESS=192.168.001.066
 LWIP.LWIP_DHCP=0
-LWIP.MEMP_NUM_TCP_SEG=300
+LWIP.MEMP_NUM_TCP_SEG=1500
 LWIP.MEM_SIZE=30*1024
 LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.PBUF_POOL_BUFSIZE=1600
-LWIP.TCP_SND_QUEUELEN=200
+LWIP.TCP_MSS=1200
+LWIP.TCP_SND_QUEUELEN=1400
 LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
