can send a whole jpeg fluently

--- a/dcmi_20240809.ioc
+++ b/dcmi_20240809.ioc
@@ -39,7 +39,7 @@ ETH.PHY_SR=0x31
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK
 FREERTOS.Tasks01=defaultTask,0,1024,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,1,1024,StartTask02,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configTOTAL_HEAP_SIZE=25600
+FREERTOS.configTOTAL_HEAP_SIZE=20480
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 FSMC.AddressSetupTime3=0
 FSMC.BusTurnAroundDuration3=0
@@ -51,15 +51,16 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 LWIP.GATEWAY_ADDRESS=192.168.001.001
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,TCP_SND_QUEUELEN,MEMP_NUM_TCP_SEG,PBUF_POOL_BUFSIZE,TCP_MSS
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,TCP_SND_QUEUELEN,MEMP_NUM_TCP_SEG,PBUF_POOL_BUFSIZE,TCP_MSS,PBUF_POOL_SIZE
 LWIP.IP_ADDRESS=192.168.001.066
 LWIP.LWIP_DHCP=0
-LWIP.MEMP_NUM_TCP_SEG=1500
-LWIP.MEM_SIZE=30*1024
+LWIP.MEMP_NUM_TCP_SEG=1400
+LWIP.MEM_SIZE=14*1024
 LWIP.NETMASK_ADDRESS=255.255.255.000
-LWIP.PBUF_POOL_BUFSIZE=1600
-LWIP.TCP_MSS=1200
-LWIP.TCP_SND_QUEUELEN=1400
+LWIP.PBUF_POOL_BUFSIZE=800
+LWIP.PBUF_POOL_SIZE=16
+LWIP.TCP_MSS=800
+LWIP.TCP_SND_QUEUELEN=300
 LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
@@ -166,15 +167,15 @@ MxCube.Version=6.4.0
 MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DCMI_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA1_Stream4_IRQn=true\:8\:0\:true\:false\:true\:true\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:6\:0\:true\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.ETH_IRQn=true\:5\:0\:true\:false\:true\:true\:false\:true
+NVIC.ETH_IRQn=true\:7\:0\:true\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_FS_IRQn=true\:5\:0\:true\:false\:true\:true\:false\:true
+NVIC.OTG_FS_IRQn=true\:6\:0\:true\:false\:true\:true\:false\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
@@ -185,7 +186,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
 NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
-NVIC.UART4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.UART4_IRQn=true\:8\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Mode=Asynchronous
 PA0-WKUP.Signal=UART4_TX
