--- a/dcmi_20240809.ioc
+++ b/dcmi_20240809.ioc
@@ -36,8 +36,11 @@ ETH.PHY_DUPLEX_STATUS=0x0010
 ETH.PHY_Name_RMII=DP83848_PHY_ADDRESS
 ETH.PHY_SPEED_STATUS=0x0004
 ETH.PHY_SR=0x31
+FATFS.IPParameters=_MAX_SS
+FATFS._MAX_SS=4096
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,FootprintOK,Mutexes01
+FREERTOS.Mutexes01=myMutex01,Dynamic,NULL
 FREERTOS.Tasks01=defaultTask,0,1024,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,1,1024,StartTask02,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=20480
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
@@ -51,16 +54,18 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 LWIP.GATEWAY_ADDRESS=192.168.001.001
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,TCP_SND_QUEUELEN,MEMP_NUM_TCP_SEG,PBUF_POOL_BUFSIZE,TCP_MSS,PBUF_POOL_SIZE
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,TCP_SND_QUEUELEN,MEMP_NUM_TCP_SEG,PBUF_POOL_BUFSIZE,TCP_MSS,PBUF_POOL_SIZE,MEMP_NUM_PBUF,TCP_SND_BUF
 LWIP.IP_ADDRESS=192.168.001.066
 LWIP.LWIP_DHCP=0
-LWIP.MEMP_NUM_TCP_SEG=1400
-LWIP.MEM_SIZE=14*1024
+LWIP.MEMP_NUM_PBUF=16
+LWIP.MEMP_NUM_TCP_SEG=1000
+LWIP.MEM_SIZE=20*960
 LWIP.NETMASK_ADDRESS=255.255.255.000
-LWIP.PBUF_POOL_BUFSIZE=1100
+LWIP.PBUF_POOL_BUFSIZE=960
 LWIP.PBUF_POOL_SIZE=16
-LWIP.TCP_MSS=1100
-LWIP.TCP_SND_QUEUELEN=300
+LWIP.TCP_MSS=960
+LWIP.TCP_SND_BUF=3840
+LWIP.TCP_SND_QUEUELEN=1000
 LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
@@ -108,26 +113,26 @@ Mcu.Pin31=PE12
 Mcu.Pin32=PE13
 Mcu.Pin33=PE14
 Mcu.Pin34=PE15
-Mcu.Pin35=PD8
-Mcu.Pin36=PD9
-Mcu.Pin37=PD10
-Mcu.Pin38=PD11
-Mcu.Pin39=PD12
+Mcu.Pin35=PB13
+Mcu.Pin36=PD8
+Mcu.Pin37=PD9
+Mcu.Pin38=PD10
+Mcu.Pin39=PD11
 Mcu.Pin4=PF1
-Mcu.Pin40=PD13
-Mcu.Pin41=PD14
-Mcu.Pin42=PD15
-Mcu.Pin43=PG2
-Mcu.Pin44=PG3
-Mcu.Pin45=PG4
-Mcu.Pin46=PG5
-Mcu.Pin47=PC6
-Mcu.Pin48=PC7
-Mcu.Pin49=PC8
+Mcu.Pin40=PD12
+Mcu.Pin41=PD13
+Mcu.Pin42=PD14
+Mcu.Pin43=PD15
+Mcu.Pin44=PG2
+Mcu.Pin45=PG3
+Mcu.Pin46=PG4
+Mcu.Pin47=PG5
+Mcu.Pin48=PC6
+Mcu.Pin49=PC7
 Mcu.Pin5=PF2
-Mcu.Pin50=PC9
-Mcu.Pin51=PA8
-Mcu.Pin52=PA9
+Mcu.Pin50=PC8
+Mcu.Pin51=PC9
+Mcu.Pin52=PA8
 Mcu.Pin53=PA11
 Mcu.Pin54=PA12
 Mcu.Pin55=PA13
@@ -170,12 +175,12 @@ NVIC.DCMI_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC.DMA1_Stream4_IRQn=true\:8\:0\:true\:false\:true\:true\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:6\:0\:true\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.ETH_IRQn=true\:7\:0\:true\:false\:true\:true\:false\:true
+NVIC.ETH_IRQn=true\:5\:0\:true\:false\:true\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_FS_IRQn=true\:6\:0\:true\:false\:true\:true\:false\:true
+NVIC.OTG_FS_IRQn=true\:5\:0\:true\:false\:true\:true\:false\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
@@ -221,10 +226,8 @@ PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA8.Locked=true
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
-PA9.GPIOParameters=PinState
-PA9.Locked=true
-PA9.PinState=GPIO_PIN_SET
-PA9.Signal=GPIO_Output
+PB13.Locked=true
+PB13.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PB6.GPIO_Mode=GPIO_MODE_AF_PP
 PB6.GPIO_PuPd=GPIO_NOPULL
@@ -376,7 +379,7 @@ ProjectManager.DeviceId=STM32F407ZGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x400
+ProjectManager.HeapSize=0x1000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -387,7 +390,7 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=dcmi_20240809.ioc
 ProjectManager.ProjectName=dcmi_20240809
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
@@ -518,12 +521,12 @@ USB_HOST0.BSP.component=
 USB_HOST0.BSP.condition=
 USB_HOST0.BSP.i2caddr=0
 USB_HOST0.BSP.i2creg=
-USB_HOST0.BSP.instance=PA9
+USB_HOST0.BSP.instance=PB13
 USB_HOST0.BSP.ip=GPIO
 USB_HOST0.BSP.mode=Output
 USB_HOST0.BSP.name=Drive_VBUS_FS
 USB_HOST0.BSP.semaphore=
-USB_HOST0.BSP.solution=PA9
+USB_HOST0.BSP.solution=PB13
 USB_OTG_FS.IPParameters=VirtualMode,phy_itface
 USB_OTG_FS.VirtualMode=Host_Only
 USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
