speed up to 0.596s per 600k

--- a/dcmi_20240809.ioc
+++ b/dcmi_20240809.ioc
@@ -54,18 +54,19 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 LWIP.GATEWAY_ADDRESS=192.168.001.001
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,TCP_SND_QUEUELEN,MEMP_NUM_TCP_SEG,PBUF_POOL_BUFSIZE,TCP_MSS,PBUF_POOL_SIZE,MEMP_NUM_PBUF,TCP_SND_BUF
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,GATEWAY_ADDRESS,MEM_SIZE,TCP_SND_QUEUELEN,MEMP_NUM_TCP_SEG,PBUF_POOL_BUFSIZE,TCP_MSS,PBUF_POOL_SIZE,MEMP_NUM_PBUF,TCP_SND_BUF,TCP_WND
 LWIP.IP_ADDRESS=192.168.001.066
 LWIP.LWIP_DHCP=0
 LWIP.MEMP_NUM_PBUF=16
 LWIP.MEMP_NUM_TCP_SEG=1000
-LWIP.MEM_SIZE=20*960
+LWIP.MEM_SIZE=12*1400
 LWIP.NETMASK_ADDRESS=255.255.255.000
-LWIP.PBUF_POOL_BUFSIZE=960
+LWIP.PBUF_POOL_BUFSIZE=1400
 LWIP.PBUF_POOL_SIZE=16
-LWIP.TCP_MSS=960
-LWIP.TCP_SND_BUF=3840
+LWIP.TCP_MSS=1400
+LWIP.TCP_SND_BUF=4200
 LWIP.TCP_SND_QUEUELEN=1000
+LWIP.TCP_WND=4200
 LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
